Initial commit for json and rails 7 support added

--- a/app/views/will_filter/filter/_condition.html.erb
+++ b/app/views/will_filter/filter/_condition.html.erb
@@ -1,9 +1,9 @@
-<% if wf_filter.errors[index] %>
+<% if wf_filter.wf_errors[index] %>
   <tr>
     <td colspan="2"></td>
     <td>
       <div class="error">
-        <%= wf_filter.errors[index] %>
+        <%= wf_filter.wf_errors[index] %>
       </div>
     </td>
     <td></td>
